--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://www.liamatt.dev'
 languageCode = 'en-us'
 title = 'Liam Attard - Software Engineer'
-theme = 'ananke'
+theme = 'hugo-paper'
