Updated 12th October

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -41,6 +41,7 @@ image = "/images/hero.svg"
 
 [params.theme]
   disableThemeToggle = true
+  defaultTheme="light"
 
 
 [[params.hero.socialLinks.fontAwesomeIcons]]
