Removing read time

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -62,3 +62,6 @@ url = "https://github.com/liamattard/"
 
   [params.singlePages]
   socialShare = false
+
+  [params.singlePages.readTime]
+    enable = false
