--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,8 +5,8 @@ theme = 'profile'
 enableRobotsTXT = true
 
 [[menus.main]]
-  identifier = "posts"
-  name = "Posts"
+  identifier = "blogs"
+  name = "Blogs"
   url = "/posts/"
   weight = 10
 [[menus.main]]
